--- a/Suma2Lealtad/Views/Home/Login.cshtml
+++ b/Suma2Lealtad/Views/Home/Login.cshtml
@@ -65,10 +65,10 @@
 
 	*@
         
-        <form name="login" action="@Url.Action("Index","Home")" class="form-horizontal" role="form">
+        @*<form name="login" action="@Url.Action("Index","Home")" class="form-horizontal" role="form">*@
 
         @*Para pruebas de NA*@
-        @*<form name="login" action="@Url.Action("Index","SaldosMovimientos")" class="form-horizontal" role="form">*@
+        <form name="login" action="@Url.Action("Index","SaldosMovimientos")" class="form-horizontal" role="form">
         @*<form name="login" action="@Url.Action("Index","OperacionesImpresora")" class="form-horizontal" role="form">*@
         @*<form name="login" action="@Url.Action("Index", "OperacionesPinPad")" class="form-horizontal" role="form">*@
 
