--- a/Suma2Lealtad/Views/Shared/_Layout.cshtml
+++ b/Suma2Lealtad/Views/Shared/_Layout.cshtml
@@ -30,72 +30,26 @@
 		</div>
 
 		<div class="col-md-6 col-plz col-left">
-			<div class="font-plz">Administrador SUMA</div><small>V.0.0.1</small>
+			<div class="font-plz">Administrador SUMA</div><small>V.0.0.3</small>
 		</div>
-
-		<div class="col-md-4 col-right">   
-            @DateTime.Now.ToString("dddd, dd MMMM yyyy")
-			<div class="row col-right" style="color: #00a160;">.</div>
-		</div>
-        <div class="col-md-4 col-right" style="top: 100px;">
-            @ViewBag.Message
-        </div>
+		
+        @if (Session["username"] != null) {
+            <div class="col-md-4 col-plz col-right">   
+                <div class="row">@Html.Raw(Session["username"].ToString())</div>
+                <div class="row">@Html.Raw(Session["appdate"].ToString())</div> 
+            </div>
+        }
 
 	</div>
 
 	<nav class="navbar navbar-default" role="navigation">
-
 	  <div class="container-fluid">
-
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-	      <ul class="nav navbar-nav">
-
-	        <li class="dropdown">
-
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Afiliado<span class="caret"></span></a>
-
-	          <ul class="dropdown-menu" role="menu">
-                <li>@Html.ActionLink("Datos del Afiliado", "Filter", "Afiliado")</li>
-                @*<li>@Html.ActionLink("Acreditar", "Filter", "Acreditar")</li>*@
-	          </ul>
-
-	        </li>
-
-	        <li class="dropdown">
-
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tablas Básicas <span class="caret"></span></a>
-
-	          <ul class="dropdown-menu" role="menu">
-                
-                <li>@Html.ActionLink("Interés", "Index", "Interest")</li>
-                <li>@Html.ActionLink("Razón de Bloqueo", "Index", "ReasonsBlock")</li>
-                <li>@Html.ActionLink("Razón de Rechazo", "Index", "Reasons")</li>
-                <li>@Html.ActionLink("Canal", "Index", "Channel")</li>
-                <li>@Html.ActionLink("Tipo", "Index", "Type")</li>
-                <li>@Html.ActionLink("Estatus", "Index", "Status")</li>
-	            <li class="divider"></li>
-                <li>@Html.ActionLink("Usuario", "Index", "User")</li>
-                <li>@Html.ActionLink("Rol", "Index", "Role")</li>
-                <li>@Html.ActionLink("Permisos", "Index", "SecurityLevel")</li>
-                <li>@Html.ActionLink("Organización", "Index", "Company")</li>
-                <li>@Html.ActionLink("Menu", "Index", "Menu")</li>
-                <li class="divider"></li>
-                <li>@Html.ActionLink("Auditoría", "Index", "Auditing")</li>
-
-	          </ul>
-
-	        </li>
-
-	      </ul>
-
-	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">Cerrar Sesión</a></li>
-	      </ul>
+       
+                 @Html.Partial("_MenuLayout")
 
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
-	
     </nav>		
 
     @RenderBody()
