--- a/Suma2Lealtad/Views/Company/Delete.cshtml
+++ b/Suma2Lealtad/Views/Company/Delete.cshtml
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading clearfix panel-gradient">
-                    <h3 class="panel-title">Interés del Cliente / Eliminar Registro</h3>
+                    <h3 class="panel-title">Compañia / Eliminar Registro</h3>
                 </div>
 
                 <div class="panel-body">
