--- a/Suma2Lealtad/Views/Company/Index.cshtml
+++ b/Suma2Lealtad/Views/Company/Index.cshtml
@@ -37,16 +37,10 @@
                                     @*@Html.DisplayNameFor(model => model.)*@ Dirección
                                 </th>
                                 <th>
-                                    @*@Html.DisplayNameFor(model => model.)*@ Telefono
+                                    @*@Html.DisplayNameFor(model => model.)*@ Teléfono
                                 </th>
                                 <th>
                                     @*@Html.DisplayNameFor(model => model.)*@ Correo
-                                </th>
-                                <th>
-                                    @*@Html.DisplayNameFor(model => model.)*@ Fecha Creación
-                                </th>
-                                <th>
-                                    @*@Html.DisplayNameFor(model => model.)*@ Usuario ID
                                 </th>
 
                                 <th class="text-center"></th>
@@ -82,14 +76,6 @@
 
                                     <td>
                                         @Html.DisplayFor(modelItem => item.email)
-                                    </td>
-
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.creationdate)
-                                    </td>
-
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.userid)
                                     </td>
 
                                     <td class="text-right">
