--- a/Suma2Lealtad/Views/Menu/Delete.cshtml
+++ b/Suma2Lealtad/Views/Menu/Delete.cshtml
@@ -2,60 +2,62 @@
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<div class="container">
 
-<h3>Are you sure you want to delete this?</h3>
-<fieldset>
-    <legend>Menu</legend>
+    <div class="row">
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.name)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.name)
-    </div>
+        <div class="col-md-push-3 col-md-6">
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.parentid)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.parentid)
-    </div>
+            <div class="panel panel-default">
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.controller)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.controller)
-    </div>
+                <div class="panel-heading clearfix panel-gradient">
+                    <h3 class="panel-title">Menu / Eliminar Registro</h3>
+                </div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.actions)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.actions)
-    </div>
+                <div class="panel-body">
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.order)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.order)
-    </div>
+                    <div class="row">
+                        <div class="col-md-push-2 col-md-8 text-center">
+                            ¿ Esta Ud. seguro de eliminar este registro ?
+                        </div>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.tooltips)
+                        <div class="col-md-push-2 col-md-8 text-center">
+                            <br />
+                            <div class="display-field">
+                                @Html.DisplayFor(model => model.name)
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- buttons -->
+                    <div class="form-group">
+                        <div class="col-md-12 col-btn text-center">
+                            @using (Html.BeginForm())
+                            {
+                                @Html.AntiForgeryToken()
+                                <p>
+                                    <input type="submit" class="btn btn-success" value="Aceptar" />
+                                    <a href="@Url.Action("Index", "Menu")" class="btn btn-danger btn-md" role="button">Cancelar</a>
+                                </p>
+                            }
+                        </div>
+                    </div>
+                    <!--// buttons -->
+
+                </div>
+                <!--// panel-body -->
+
+            </div>
+            <!--// panel -->
+
+        </div>
+        <!--// columns -->
+
     </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.tooltips)
-    </div>
-</fieldset>
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-}
+    <!--// row -->
+
+</div>
+<!--// container -->
