--- a/Suma2Lealtad/Views/Shared/_Layout.cshtml
+++ b/Suma2Lealtad/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 
 <html lang="en">
 
-  <head>
+<head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,94 +17,97 @@
       <script src="@Url.Content("~/Scripts/respond.min.js")"></script>
     <![endif]-->
 
-  </head>
+</head>
 
-  <body>
+<body>
 
     <div class="container">
-		
-	<div class="row row-plz">
 
-		<div class="col-md-2 col-right">
-			<img src="@Url.Content("~/Images/plzlogo.jpg")" />
-		</div>
+        <div class="row row-plz">
 
-		<div class="col-md-6 col-plz col-left">
-			<div class="font-plz">Administrador SUMA</div><small>V.0.0.1</small>
-		</div>
+            <div class="col-md-2 col-right">
+                <img src="@Url.Content("~/Images/plzlogo.jpg")" />
+            </div>
 
-		<div class="col-md-4 col-right">   
-            @DateTime.Now.ToString("dddd, dd MMMM yyyy")
-			<div class="row col-right" style="color: #00a160;">.</div>
-		</div>
-        <div class="col-md-4 col-right" style="top: 100px;">
-            @ViewBag.Message
+            <div class="col-md-6 col-plz col-left">
+                <div class="font-plz">Administrador SUMA</div>
+                <small>V.0.0.1</small>
+            </div>
+
+            <div class="col-md-4 col-right">
+                @DateTime.Now.ToString("dddd, dd MMMM yyyy")
+                <div class="row col-right" style="color: #00a160;">.</div>
+            </div>
+            <div class="col-md-4 col-right" style="top: 100px;">
+                @ViewBag.Message
+            </div>
+
         </div>
 
-	</div>
+        <nav class="navbar navbar-default" role="navigation">
 
-	<nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
 
-	  <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
 
-	      <ul class="nav navbar-nav">
+                        <li class="dropdown">
 
-	        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Afiliado<span class="caret"></span></a>
 
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Afiliado<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink("Datos del Afiliado", "Filter", "Afiliado")</li>
+                                <li>@Html.ActionLink("Saldos y Movimientos", "Index", "SaldosMovimientos")</li>
+                            </ul>
 
-	          <ul class="dropdown-menu" role="menu">
-                <li>@Html.ActionLink("Datos del Afiliado", "Filter", "Afiliado")</li>
-                @*<li>@Html.ActionLink("Acreditar", "Filter", "Acreditar")</li>*@
-	          </ul>
+                        </li>
 
-	        </li>
+                        <li class="dropdown">
 
-	        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tablas Básicas <span class="caret"></span></a>
 
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tablas Básicas <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
 
-	          <ul class="dropdown-menu" role="menu">
-                
-                <li>@Html.ActionLink("Interés", "Index", "Interest")</li>
-                <li>@Html.ActionLink("Razón de Bloqueo", "Index", "ReasonsBlock")</li>
-                <li>@Html.ActionLink("Razón de Rechazo", "Index", "Reasons")</li>
-                <li>@Html.ActionLink("Canal", "Index", "Channel")</li>
-                <li>@Html.ActionLink("Tipo", "Index", "Type")</li>
-                <li>@Html.ActionLink("Estatus", "Index", "Status")</li>
-	            <li class="divider"></li>
-                <li>@Html.ActionLink("Usuario", "Index", "User")</li>
-                <li>@Html.ActionLink("Rol", "Index", "Role")</li>
-                <li>@Html.ActionLink("Permisos", "Index", "SecurityLevel")</li>
-                <li>@Html.ActionLink("Organización", "Index", "Company")</li>
-                <li>@Html.ActionLink("Menu", "Index", "Menu")</li>
-                <li class="divider"></li>
-                <li>@Html.ActionLink("Auditoría", "Index", "Auditing")</li>
+                                <li>@Html.ActionLink("Interés", "Index", "Interest")</li>
+                                <li>@Html.ActionLink("Razón de Bloqueo", "Index", "ReasonsBlock")</li>
+                                <li>@Html.ActionLink("Razón de Rechazo", "Index", "Reasons")</li>
+                                <li>@Html.ActionLink("Canal", "Index", "Channel")</li>
+                                <li>@Html.ActionLink("Tipo", "Index", "Type")</li>
+                                <li>@Html.ActionLink("Estatus", "Index", "Status")</li>
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink("Usuario", "Index", "User")</li>
+                                <li>@Html.ActionLink("Rol", "Index", "Role")</li>
+                                <li>@Html.ActionLink("Permisos", "Index", "SecurityLevel")</li>
+                                <li>@Html.ActionLink("Organización", "Index", "Company")</li>
+                                <li>@Html.ActionLink("Menu", "Index", "Menu")</li>
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink("Auditoría", "Index", "Auditing")</li>
 
-	          </ul>
+                            </ul>
 
-	        </li>
+                        </li>
 
-	      </ul>
+                    </ul>
 
-	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">Cerrar Sesión</a></li>
-	      </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Cerrar Sesión</a></li>
+                    </ul>
 
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	
-    </nav>		
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
 
-    @RenderBody()
+        </nav>
+
+        @RenderBody()
 
     </div>
-      
+
     <script src="@Url.Content("~/Scripts/jquery-2.1.1.min.js")"></script>
     <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
 
-  </body>
+</body>
 
 </html>
