--- a/Suma2Lealtad/Views/Status/Create.cshtml
+++ b/Suma2Lealtad/Views/Status/Create.cshtml
@@ -43,7 +43,7 @@
                                 <div class="col-md-12 col-btn">
                                     <div class="pull-right">
                                         <input type="submit" class="btn btn-success btn-md" value="Guardar" />
-                                        <a href="/Status" class="btn btn-danger btn-md" role="button">Cancelar</a>
+                                        <a href="@Url.Action("Index", "Status")" class="btn btn-danger btn-md" role="button">Cancelar</a>
                                     </div>
                                 </div>
                             </div>
