--- a/Suma2Lealtad/Views/User/Index.cshtml
+++ b/Suma2Lealtad/Views/User/Index.cshtml
@@ -61,6 +61,9 @@
 
 
                                     <td class="text-right">
+                                        <a href="@Url.Action("Roles", "User", new { id = item.id })" class="btn btn-primary btn-xs">
+                                            <span class="glyphicon glyphicon-pushpin"></span>
+                                        </a>
                                         <a href="@Url.Action("Edit", "User", new { id = item.id })" class="btn btn-info btn-xs">
                                             <span class="glyphicon glyphicon-edit"></span>
                                         </a>
