--- a/Suma2Lealtad/Views/Home/Login.cshtml
+++ b/Suma2Lealtad/Views/Home/Login.cshtml
@@ -16,9 +16,9 @@
         </div>
                         
         <div class="editor-field col-md-4" style="margin-top: 80px;" aria-required="true">
-            <input class="form-control" placeholder="Usuario" name="username" value="ddepablos" type="text" required="">
+            <input class="form-control" placeholder="Usuario" name="username" value="llamarca" type="text" required="">
             <br>
-            <input class="form-control" placeholder="Contraseña" name="password" value="" type="password" required="">
+            <input class="form-control" placeholder="Contraseña" name="password" value="123456" type="password" required="">
             <br>
             <input type="submit" class="btn btn-success btn-md" value="Iniciar Sesión">
         </div>
