--- a/Suma2Lealtad/Views/User/Index.cshtml
+++ b/Suma2Lealtad/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Suma2Lealtad.Models.User>
+﻿@model IEnumerable<Suma2Lealtad.Models.Usuario>
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
