--- a/Suma2Lealtad/Views/ReasonsBlock/Create.cshtml
+++ b/Suma2Lealtad/Views/ReasonsBlock/Create.cshtml
@@ -44,7 +44,7 @@
                                 <div class="col-md-12 col-btn">
                                     <div class="pull-right">
                                         <input type="submit" class="btn btn-success btn-md" value="Guardar" />
-                                        <a href="@Url.Action("Index", "ReasonsBlock")" class="btn btn-success btn-md" role="button">Cancelar</a>
+                                        <a href="@Url.Action("Index", "ReasonsBlock")" class="btn btn-danger btn-md" role="button">Cancelar</a>
                                     </div>
                                 </div>
                             </div>
