--- a/Suma2Lealtad/Views/Role/Edit.cshtml
+++ b/Suma2Lealtad/Views/Role/Edit.cshtml
@@ -44,7 +44,7 @@
                                 <div class="col-md-12 col-btn">
                                     <div class="pull-right">
                                         <input type="submit" class="btn btn-success btn-md" value="Guardar" />
-                                        <a class="btn btn-success btn-md" href="@Url.Action("Index", "Role")">Cancelar</a>
+                                        <a class="btn btn-danger btn-md" href="@Url.Action("Index", "Role")">Cancelar</a>
                                     </div>
                                 </div>
                             </div>
