--- a/Suma2Lealtad/Views/User/Create.cshtml
+++ b/Suma2Lealtad/Views/User/Create.cshtml
@@ -69,14 +69,6 @@
                                     @Html.ValidationMessageFor(model => model.email)
                                 </div>
 
-@*                                <div class="editor-label col-md-4 control-label">
-                                    @Html.LabelFor(model => model.status)
-                                </div>
-                                <div class="editor-field col-md-8">
-                                    @Html.EditorFor(model => model.status)
-                                    @Html.ValidationMessageFor(model => model.status)
-                                </div>*@
-
                             </div>
 
                             <!-- buttons -->
@@ -84,7 +76,7 @@
                                 <div class="col-md-12 col-btn">
                                     <div class="pull-right">
                                         <input type="submit" class="btn btn-success btn-md" value="Guardar" />
-                                        <a class="btn btn-success btn-md" href="@Url.Action("Index", "User")">Cancelar</a>
+                                        <a class="btn btn-danger btn-md" href="@Url.Action("Index", "User")">Cancelar</a>
                                     </div>
                                 </div>
                             </div>
