Pruebas Arturo modales y multithreading SL

--- a/Suma2Lealtad/Views/Home/Login.cshtml
+++ b/Suma2Lealtad/Views/Home/Login.cshtml
@@ -5,18 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<form name="login" method="post" action="@Url.Action("Index","Home")" class="form-horizontal" role="form">
+@*<form name="login" method="post" action="@Url.Action("Index","Home")" class="form-horizontal" role="form">*@
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 	      <ul class="nav navbar-nav"></ul>
 
 	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
+	  @*</div><!-- /.container-fluid -->*@
 	
-    </nav>		
+    @*</nav>*@		
 
-    <div class="panel-body">
+    @*<div class="panel-body">*@
 
 @*    @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
