--- a/SumaPlazas.Dispositivos.Impresora/MainPage.xaml
+++ b/SumaPlazas.Dispositivos.Impresora/MainPage.xaml
@@ -4,9 +4,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="500">
+    d:DesignHeight="400" d:DesignWidth="600">
 
     <Grid x:Name="LayoutRoot" Background="White">
-        <ListBox x:Name="listBox1" Margin="10,10,10,0" Background="Transparent" Foreground="Black" BorderThickness="1" Height="232" VerticalAlignment="Top" />
+        <ListBox x:Name="listBox1" Margin="10" Background="Transparent" Foreground="Black" BorderThickness="1" />
     </Grid>
 </UserControl>
